hydroflow/tests/snapshots/surface_lattice_bimorphism__cartesian_product_1401@graphvis_dot.snap
---
source: hydroflow/tests/surface_lattice_bimorphism.rs
expression: "df.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter(0..1)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) map(SetUnionSingletonSet::new_from)", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) state::<'static, SetUnionHashSet<u32>>()", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) source_iter(1..2)", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) map(SetUnionSingletonSet::new_from)", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) state::<'static, SetUnionHashSet<u32>>()", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) lattice_bimorphism(CartesianProductBimorphism::<HashSet<_>>::default(), lhs, rhs)", shape=invhouse, fillcolor="#88aaff"]
    n8v1 [label="(n8v1) for_each(|x| out_send.send(x).unwrap())", shape=house, fillcolor="#ffff88"]
    n9v1 [label="(n9v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n10v1 [label="(n10v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n2v1 -> n3v1
    n1v1 -> n2v1
    n5v1 -> n6v1
    n4v1 -> n5v1
    n3v1 -> n9v1
    n6v1 -> n10v1
    n7v1 -> n8v1
    n9v1 -> n7v1 [label="0"]
    n10v1 -> n7v1 [label="1"]
    n3v1 -> n7v1 [color=red]
    n6v1 -> n7v1 [color=red]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
        n2v1
        n3v1
        subgraph "cluster_sg_1v1_var_lhs" {
            label="var lhs"
            n1v1
            n2v1
            n3v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 0"
        n4v1
        n5v1
        n6v1
        subgraph "cluster_sg_2v1_var_rhs" {
            label="var rhs"
            n4v1
            n5v1
            n6v1
        }
    }
    subgraph "cluster n3v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 1"
        n7v1
        n8v1
        subgraph "cluster_sg_3v1_var_my_join" {
            label="var my_join"
            n7v1
            n8v1
        }
    }
}
